Upgrading Bootstrap to v4.3.1

--- a/tardis/apps/anzsrc_codes/templates/anzsrc_codes/index.html
+++ b/tardis/apps/anzsrc_codes/templates/anzsrc_codes/index.html
@@ -5,9 +5,9 @@
 
 <div class="form-horizontal">
   <div class="form-group">
-    <label class="col-md-2 control-label"
+    <label class="col-lg-2 control-label"
            for="field-of-research-search">Field of Research</label>
-    <div class="col-md-10">
+    <div class="col-lg-10">
       <input id="field-of-research-search"
              class="form-control" type="text"
              placeholder="Start typing to select a Field of Research"/>
