--- a/tardis/apps/sftp/templates/sftp/index.html
+++ b/tardis/apps/sftp/templates/sftp/index.html
@@ -1,8 +1,8 @@
 {% extends "tardis_portal/portal_template.html" %}
 {% block content %}
-    <h1>Instructions for file access via SFTP and SSHFS</h1>
+    <h2>Instructions for file access via SFTP and SSHFS</h2>
     <div class="row">
-    <div class="col-md-8">
+    <div class="col-lg-8">
     <p>
       You can access all the files you have access to on the web via the SFTP protocol.
       This allows you to use Desktop programs like Filezilla or <a href="https://cyberduck.io"
