--- a/tardis/search/templates/search/search.html
+++ b/tardis/search/templates/search/search.html
@@ -6,7 +6,7 @@
     <h2>Search {{ site_title }}</h2>
     <br/>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-lg-3">
         <form method="GET" action="{% url "haystack_search" %}">
         {{ form | bootstrap}}
             <input class="btn btn-success" type="submit" value="Search">
