--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group_readonly.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_group_readonly.html
@@ -1,7 +1,7 @@
 <div class="groups">
 {% if group_acls_system_owned or group_acls_user_owned %}
   <div class="access_list_group row" style="margin-top: 1ex; margin-bottom: 1ex">
-      <div class="col-md-10">
+      <div class="col-lg-10">
       <table class="table table-striped">
               <tr>
                   <th>
