--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_group_result.html
@@ -1,6 +1,6 @@
 <div class="access_list_group group" style="margin-top: 1ex; margin-bottom: 1ex">
   <div class="access_list_group_row row">
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <strong>
         <a href="{% url 'tardis.tardis_portal.views.retrieve_group_userlist_readonly' group.id %}"
            class="members-hidden member_list_user_toggle small">
@@ -9,7 +9,7 @@
         </a>
       </strong>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
       {% if group_acl.canRead %}
       <span class="label label-success">Read</span>
       {% endif %}
@@ -21,12 +21,12 @@
       {% endif %}
     </div>
     {% if system %}
-    <div class="col-md-4">
+    <div class="col-lg-4">
       <em>(System Group)</em>
     </div>
     {% else %}
-    <div class="col-md-4">
-      <a class="remove_group btn btn-xs btn-danger"
+    <div class="col-lg-4">
+      <a class="remove_group btn btn-sm btn-danger"
          href="{% url 'tardis.tardis_portal.views.remove_experiment_access_group' experiment_id group.id %}">
         <i class="fa fa-remove"></i> Delete
       </a>
