--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_datasets.html
@@ -6,7 +6,7 @@
 {% capture as action_bar %}
   {% if has_download_permissions or has_write_permissions %}
     {% if has_download_permissions %}
-      <button type="submit" class="btn btn-default btn-xs download-selected">
+      <button type="submit" class="btn btn-outline-secondary btn-xs download-selected">
         <i class="fa fa-download"></i>
         Download Selected
       </button>
@@ -22,7 +22,7 @@
 {% if has_download_permissions or has_write_permissions %}
 
   {% if has_write_permissions and not experiment.is_publication %}
-  <a class="add-dataset btn btn-default btn-xs pull-right"
+  <a class="add-dataset btn btn-outline-secondary btn-xs float-right"
      href="{% url 'tardis.tardis_portal.views.add_dataset' experiment.id %}">
     <i class="fa fa-plus"></i>
     Add New
