--- a/tardis/tardis_portal/templates/tardis_portal/form_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/form_template.html
@@ -8,10 +8,10 @@
 </p>
 {% endif %}
 <div class="page-header">
-  <h1 class="title">{{ header }}</h1>
+  <h2 class="title">{{ header }}</h2>
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-lg-12">
   	<form enctype="multipart/form-data" action="" method="post"
           class="form-horizontal">
       {% csrf_token %}
