--- a/tardis/tardis_portal/templates/tardis_portal/search_experiment_form.html
+++ b/tardis/tardis_portal/templates/tardis_portal/search_experiment_form.html
@@ -82,7 +82,7 @@
         });
         jQuery('div.hideme').hide();
         // Date selects appropriately
-        $('#id_date_month, #id_date_day, #id_date_year').addClass('col-md-2');
+        $('#id_date_month, #id_date_day, #id_date_year').addClass('col-lg-2');
     });
 </script>
 
