--- a/tardis/tardis_portal/static/css/default.css
+++ b/tardis/tardis_portal/static/css/default.css
@@ -5,8 +5,18 @@ body {
   min-height: 100%;
 }
 
+h2 {
+  font-size: 1.5em;
+  color: rgb(25, 94, 163);
+}
+
+h3 {
+  font-size: 1.3em;
+  color: rgb(25, 94, 163);
+}
+
 /* Inset brand in nav bar */
-.navbar .brand a {
+.navbar-brand a {
   color: #0097E2;
 }
 
@@ -126,7 +136,6 @@ div.copylink {
 
 /* index page */
 .experiments .accordion-toggle .explink {
-    font-size: 1.3em;
     max-width: 67%;
 }
 .experiments .accordion-toggle .badgelist {
@@ -204,7 +213,6 @@ div.copylink {
 
 /* mydata page */
 .mydata .accordion-toggle .explink {
-    font-size: 1.3em;
     max-width: 67%;
 }
 .mydata .accordion-toggle .badgelist {
@@ -277,7 +285,7 @@ div.copylink {
  * later versions of jQuery, but this changes the default heading sizes, so
  * for now, we'll revert to the heading sizes from 2.0.4, until we have time
  * to upgrade to a more recent Bootstrap */
-h1, h2, h3, h4, h5, h6 {
+/*h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-family: inherit;
   font-weight: bold;
@@ -294,7 +302,7 @@ h4,h5,h6 {line-height: 18px;}
 h4 {font-size: 14px;}
 h4 small {font-size: 12px;}
 h5 {font-size: 12px;}
-h6 {font-size: 11px;color: #999999;text-transform: uppercase;}
+h6 {font-size: 11px;color: #999999;text-transform: uppercase;} */
 .page-header { margin-top: 10px; margin-bottom: 10px; }
 
 .datasets.thumbnails {
@@ -311,7 +319,8 @@ h6 {font-size: 11px;color: #999999;text-transform: uppercase;}
 
 /* Badge styles that were provided in Bootstrap v2 */
 .badge-default {
-  background-color: #999999;
+  color: #ffffff;
+  background-color: #777777;
 }
 .badge-info {
   background-color: #3a87ad;
@@ -320,6 +329,7 @@ h6 {font-size: 11px;color: #999999;text-transform: uppercase;}
     background-color: #b94a48;
 }
 .badge-inverse {
+  color: #ffffff;
   background-color: #333333;
 }
 .badge-success {
@@ -338,4 +348,19 @@ h6 {font-size: 11px;color: #999999;text-transform: uppercase;}
 .modal-body {
     max-height: calc(100vh - 100px);
     overflow-y: auto;
+}
+
+/* Extra small buttons were removed in Bootstrap v4
+   but MyTardis still uses them for now. */
+.btn-group-xs > .btn, .btn-xs {
+  padding  : .25rem .4rem;
+  font-size  : .875rem;
+  line-height  : .5;
+  border-radius : .2rem;
+}
+.btn-group-xxs > .btn, .btn-xxs {
+  padding  : .15rem .3rem;
+  font-size  : .675rem;
+  line-height  : .4;
+  border-radius : .1rem;
 }
