--- a/tardis/tardis_portal/templates/tardis_portal/about.html
+++ b/tardis/tardis_portal/templates/tardis_portal/about.html
@@ -3,20 +3,20 @@
 {% block content %}
 
     <div class="page-header">
-        <h1 class="title">About {{ site_title|default:'MyTardis' }}</h1>
+        <h2 class="title">About {{ site_title|default:'MyTardis' }}</h2>
     </div>
     <div class="row">
-      <div class="col-md-10">
+      <div class="col-lg-10">
         {% include custom_about_section %}
       </div>
     </div>
     <div class="page-header">
-        <h1 class="title">Project Development</h1>
+        <h2 class="title">Project Development</h2>
     </div>
 
     <div class="row">
-        <div class="col-md-2">
-            <h2><i class="fa fa-question-sign fa-lg"></i> Help</h2>
+        <div class="col-lg-2">
+            <h3><i class="fa fa-question-sign fa-lg"></i> Help</h3>
             <ul class="list-unstyled">
                 <li>
                     <a href="http://mytardis.readthedocs.io/en/{{ version.tag|lower }}/userguide.html"
@@ -28,9 +28,9 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-5">
-            <h2><i class="fa fa-github fa-lg"></i>
-                Code / Documentation</h2>
+        <div class="col-lg-5">
+            <h3><i class="fa fa-github fa-lg"></i>
+                Code / Documentation</h3>
 
             <p>
                 The MyTardis project (including the Monash ANDS-funded EIF019
@@ -38,8 +38,8 @@
                 is being actively developed and documented on
                 <a href="https://github.com/mytardis/mytardis/">GitHub</a>.
         </div>
-        <div class="col-md-5">
-            <h2><i class="fa fa-comment fa-lg"></i> Discussion Group</h2>
+        <div class="col-lg-5">
+            <h3><i class="fa fa-comment fa-lg"></i> Discussion Group</h3>
             <ul class="list-unstyled">
                 <li>
                     Please contact us to get invited to our Slack Team
@@ -48,14 +48,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-12">
-            <h2><i class="fa fa-book fa-lg"></i> Citation</h2>
+        <div class="col-lg-12">
+            <h3><i class="fa fa-book fa-lg"></i> Citation</h3>
 
             <p>
                 Please cite the following when referring to MyTardis:
             </p>
 
-            <blockquote class="blockquote small">
+            <span class="small">
+              <blockquote class="blockquote" style="font-size: 1em;">
                 Androulakis S, Schmidberger J, Bate MA, Degori R,
                 Beitz A, Keong C, Cameron B, McGowan S, Porter CJ,
                 Harrison A, Hunter J, Martin JL, Kobe B, Dobson RC, Parker
@@ -65,7 +66,8 @@
                 Crystallogr.</em> Jul;64(Pt
                 7):810-4.
                 <a href="http://www.ncbi.nlm.nih.gov/pubmed/18566516?ordinalpos=1&itool=EntrezSystem2.PEntrez.Pubmed.Pubmed_ResultsPanel.Pubmed_RVDocSum">[PubMed]</a>
-            </blockquote>
+              </blockquote>
+            </span>
 
             <p>
                 For more information on the MyTardis project please
@@ -73,8 +75,8 @@
                 <a href="http://www.mytardis.org/contact/">http://www.mytardis.org/contact/</a>.
             </p>
         </div>
-        <div class="col-md-12">
-            <div class="pull-right">
+        <div class="col-lg-12">
+            <div class="float-right">
                 This server is running <a
                     href="https://github.com/mytardis/mytardis/tree/{{ version.commit_id }}">version
                 {{ version.tag }}</a> of MyTardis,
