--- a/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/add_or_edit_dataset.html
@@ -6,33 +6,32 @@
 {% block content %}
 <div class="page-header">
   {% if dataset %}
-  <h1>Edit dataset</h1>
+  <h2>Edit dataset</h2>
   {% else %}
-  <h1>Add new dataset</h1>
+  <h2>Add new dataset</h2>
   {% endif %}
 </div>
 
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-lg-8">
     <form class="form-horizontal" action="" method="post">{% csrf_token %}
-      {{ form|bootstrap_horizontal:'col-md-2' }}
+      {{ form|bootstrap_horizontal:'col-lg-2' }}
       <div class="form-group">
-        <div class="col-md-offset-2 col-md-6">
+        <div class="col-lg-offset-2 col-lg-6">
           <button type="submit" class="btn btn-primary">
             Save
           </button>
           {% if dataset %}
-            <button type="button" class="btn btn-default">
-              <a href="{% url 'tardis_portal.view_dataset' dataset.id %}">
-                 Cancel
+            <a href="{% url 'tardis_portal.view_dataset' dataset.id %}"
+               class="btn btn-outline-secondary"
+               role="button" tabindex="-1">
+              Cancel
             </a>
-            </button>
           {% else %}
-            <button type="button" class="btn btn-default">
-               <a href="{% url 'tardis.tardis_portal.views.my_data' %}">
-               Cancel
-               </a>
-            </button>
+            <a href="{% url 'tardis.tardis_portal.views.my_data' %}"
+               class="btn btn-outline-secondary" role="button" tabindex="-1">
+              Cancel
+            </a>
           {% endif %}
         </div>
       </div>
