--- a/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user_readonly.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/access_list_user_readonly.html
@@ -1,6 +1,6 @@
 <div class="users">
   <div class="access_list_user row" style="margin-top: 1ex; margin-bottom: 1ex">
-    <div class="col-md-10">
+    <div class="col-lg-10">
         <table class="table table-striped">
                 <tr>
                     <th>
