--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_to_group_result.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_to_group_result.html
@@ -1,17 +1,17 @@
 <div class="access_list_user row" style="margin-top: 1ex; margin-bottom: 1ex">
-  <div class="col-md-6">
+  <div class="col-lg-6">
     <strong>{{ user.first_name }} {{ user.last_name }} [{{ user.username }}]</strong>
     {% if user.email %}<em>({{ user.email }})</em>{% endif %}
   </div>
-  <div class="col-md-2">
+  <div class="col-lg-2">
     {% if user.groupadmin_set.count %}
       <span class="label label-success">Group Admin</span>
     {% else %}
       <span class="label label-info">Member</span>
     {% endif %}
   </div>
-  <div class="col-md-2">
-    <a title="Remove Access" class="remove_user btn btn-danger btn-xs"
+  <div class="col-lg-2">
+    <a title="Remove Access" class="remove_user btn btn-danger btn-sm"
        href="{% url 'tardis.tardis_portal.views.remove_user_from_group' group_id user.username %}">
       <i class="fa fa-remove"></i>
       Delete
