--- a/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_to_group_result_readonly.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/add_user_to_group_result_readonly.html
@@ -1,9 +1,9 @@
 <div class="access_list_user row" style="margin-top: 1ex; margin-bottom: 1ex">
-  <div class="col-md-6">
+  <div class="col-lg-6">
     <strong>{{ user.first_name }} {{ user.last_name }} [{{ user.username }}]</strong>
     {% if user.email %}<em>({{ user.email }})</em>{% endif %}
   </div>
-  <div class="col-md-2">
+  <div class="col-lg-2">
     {% if user.groupadmin_set.count %}
       <span class="label label-success">Group Admin</span>
     {% else %}
