--- a/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/datafile_list.html
@@ -35,7 +35,7 @@
 {{ paginator_block }}
 
 <p id="filename-search" class="js-required" data-action="/ajax/datafile_list/{{dataset.id}}/" data-method="GET" style="padding: 5px 0 5px 10px; border: 1px solid #DDDDDD;">
-<input id="filename-search-text" style="width: 95%; font-size: 100%; margin-top: 5px;"
+<input id="filename-search-text" style="width: 95%; font-size: 80%; margin-top: 5px;"
     title='Enter part or all of a filename, then press enter. e.g. Enter "175" to show only files containing "175" in their filename.'
     placeholder='Search: Enter part or all of a filename, then press enter.'
     type="text"
@@ -52,19 +52,35 @@
             <thead>
             <tr id="datafile-selectors" class="js-required">
                 <td colspan="3">
-                    Select: <a class="dataset_selector_all btn btn-default btn-xs">All</a> / <a class="dataset_selector_none btn btn-default btn-xs">None</a>
-                    <div class="pull-right">
-                        <button type="submit" class="btn btn-default btn-xs download-selected">
-                            <i class="fa fa-download"></i>
-                            Download Selected Files
-                        </button>
-                        <input type="hidden" name="comptype" value="{{default_format}}"/>
-                        <input type="hidden" name="organization" value="{{default_organization}}"/>
-                    </div></td>
+                    <div class="row">
+                      <div class="col">
+                        Select:
+                        <a class="dataset_selector_all btn btn-outline-secondary btn-xs p-lg-2"
+                           role="button" tabindex="-1">
+                          All
+                        </a>
+                        /
+                        <a class="dataset_selector_none btn btn-outline-secondary btn-xs p-lg-2"
+                           role="button" tabindex="-1">
+                          None
+                        </a>
+                      </div>
+                      <div class="col">
+                         <div class="float-right">
+                          <button type="submit" class="btn btn-outline-secondary btn-xs float-right">
+                            <i class="fa fa-sm fa-download"></i>
+                            Download Selected
+                          </button>
+                          <input type="hidden" name="comptype" value="{{default_format}}"/>
+                          <input type="hidden" name="organization" value="{{default_organization}}"/>
+                         </div>
+                      </div>
+                    </div>
+                </td>
             </tr>
             </thead>
         {% endif %}
-        <tbody>
+        <tbody class="small">
         {% for datafile in datafiles.object_list %}
             <tr class="datafile search_match_file">
                 <td>
@@ -121,9 +137,9 @@
 
                 </td>
                 <td style="width: 130px;">
-                    <div class="btn-group pull-right">
+                    <div class="btn-group float-right">
                         {% if has_download_permissions and datafile.verified %}
-                            <a class="btn btn-default {% if datafile.is_online %}" title="Download"
+                            <a class="btn btn-outline-secondary {% if datafile.is_online %}" title="Download"
                                {% else %} archived-file disabled"{% endif %}
                                href="{{ datafile.get_download_url }}">
                                 <i class="fa fa-download fa-lg"></i>
@@ -132,13 +148,13 @@
                         {% if has_write_permissions and not immutable %}
                             <a title="Add Metadata" href="{% url 'tardis.tardis_portal.views.add_datafile_par' datafile.id %}"
                                data-toggle_selector="#datafile_metadata_toggle_{{datafile.id}}"
-                               class="btn btn-default add-metadata">
+                               class="btn btn-outline-secondary add-metadata">
                                 <i class="fa fa-plus"></i>
                             </a>
                         {% endif %}
 
                         <a id="datafile_metadata_toggle_{{datafile.id}}" title="Show/Hide Metadata"
-                           class="btn btn-default datafile-info-toggle metadata_hidden btn" href="/ajax/datafile_details/{{datafile.id}}/">
+                           class="btn btn-outline-secondary datafile-info-toggle metadata_hidden btn" href="/ajax/datafile_details/{{datafile.id}}/">
                             <i class="fa fa-list"></i>
                         </a>
                     </div>
