--- a/tardis/tardis_portal/templates/tardis_portal/ajax/dataset_metadata.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/dataset_metadata.html
@@ -1,10 +1,10 @@
 {% load capture %}
 
 {% if has_write_permissions and not dataset.immutable %}
-<div class="pull-right">
+<div class="float-right">
   <a title="Add"
      href="{% url 'tardis.tardis_portal.views.add_dataset_par' dataset.id %}"
-     class="add-metadata btn btn-default btn-xs"
+     class="add-metadata btn btn-outline-secondary btn-xs"
      style="margin-right: 20px">
     <i class="fa fa-plus"></i>
     Add Dataset Metadata
@@ -16,8 +16,9 @@
 {% for parameterset in parametersets %}
   {% capture as edit_control %}
    {% if has_write_permissions and not parameterset.schema.immutable %}
-   <div class="pull-right">
-       <a class="edit-metadata btn btn-default btn-xs btn-warning" href="{% url 'tardis.tardis_portal.views.edit_dataset_par' parameterset.id %}">
+   <div class="float-right">
+       <a class="edit-metadata btn btn-outline-secondary btn-sm"
+           href="{% url 'tardis.tardis_portal.views.edit_dataset_par' parameterset.id %}">
           <i class="fa fa-pencil"></i>
           Edit
        </a>
