--- a/tardis/tardis_portal/templates/tardis_portal/ajax/owned_exps_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/owned_exps_list.html
@@ -15,48 +15,62 @@
   <div class="accordion-group">
     <div class="accordion-heading">
       <div id="toggle-{{exp.id}}" class="accordion-toggle" data-toggle="collapse">
-        <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-        <strong><a class="pull-left explink"
-                   href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-        <ul class="nav nav-pills badgelist">
-          <li class="pull-right">
-            {{ exp|experiment_public_access_badge }}
-          </li>
-          <li class="pull-right">
-            {{ exp|experiment_datafiles_badge }}
-          </li>
-          <li class="pull-right">
-            {{ exp|experiment_datasets_badge }}
-          </li>
-          <li class="pull-right">
-            {{ exp|experiment_last_updated_badge }}
-          </li>
-        </ul>
-        <small>
-          {% for author in exp.experimentauthor_set.all %}
-            {% if not forloop.first %}, {% endif %}
-            <span property="dc:author">{{ author.author }}</span>
-          {% empty %}
-            &nbsp;
-          {% endfor %}
-        </small>
-        <span class="pull-right">
-          {% for dltype, dlurl in exp.get_download_urls.items %}
-            {% if forloop.first %}
-              <a class="dllink" href="{{dlurl}}"
-                 title="Download Entire Experiment as {{dltype}}">
-                <i class="fa fa-download"></i>
-                <em>Download data as .{{dltype}}</em>
-              </a>
-            {% endif %}
-          {% endfor %}
-        </span>
+        <div class="row">
+          <div class="col">
+            <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
+            <strong>
+              <a class="float-left explink"
+                 href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
+            </strong>
+          </div>
+          <div class="col">
+            <ul class="nav nav-pills badgelist float-right">
+              <li class="float-right">
+                {{ exp|experiment_public_access_badge }}
+              </li>
+              <li class="float-right">
+                {{ exp|experiment_datafiles_badge }}
+              </li>
+              <li class="float-right">
+                {{ exp|experiment_datasets_badge }}
+              </li>
+              <li class="float-right">
+                {{ exp|experiment_last_updated_badge }}
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <small>
+              {% for author in exp.experimentauthor_set.all %}
+                {% if not forloop.first %}, {% endif %}
+                <span property="dc:author">{{ author.author }}</span>
+              {% empty %}
+                &nbsp;
+              {% endfor %}
+            </small>
+          </div>
+          <div class="col">
+            <span class="float-right">
+              {% for dltype, dlurl in exp.get_download_urls.items %}
+                {% if forloop.first %}
+                  <a class="dllink" href="{{dlurl}}"
+                     title="Download Entire Experiment as {{dltype}}">
+                    <i class="fa fa-download"></i>
+                    <em>Download data as .{{dltype}}</em>
+                  </a>
+                {% endif %}
+              {% endfor %}
+            </span>
+          </div>
+        </div>
       </div> {% comment %} class="accordion-toggle" {% endcomment %}
     </div> {% comment %} class="accordion-heading" {% endcomment %}
     <div id="collapse-{{exp.id}}"
          class="panel-collapse collapse">
       <div class="accordion-inner">
-        <p>{{exp.description|default:""|bleach}}</p>
+        <p class="small">{{exp.description|default:""|bleach}}</p>
         <div id="latest-dataset-{{exp.id}}"></div>
       </div> {% comment %} class="accordion-inner" {% endcomment %}
     </div> {% comment %} class="accordion-body" {% endcomment %}
