--- a/tardis/tardis_portal/templates/tardis_portal/ajax/parameteredit.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/parameteredit.html
@@ -37,18 +37,14 @@
       <p style="color: red"><em>There were errors in the parameter submission. Please fix and resubmit.</em></p>
     {% endif %}
 
-    <div class="form-group">
-      <footer class="col-md-12 text-right">
-        <button type="submit" class="cancel-button btn btn-default"
-                data-dismiss="modal">
-          <i class="fa fa-close"></i>
-          Cancel
-        </button>
-        <button type="submit" class="submit-button btn btn-success">
-          <i class="fa fa-check"></i>
-          Save
-        </button>
-      </footer>
-    </div>
+    <button type="submit" class="submit-button btn btn-success float-right m-1">
+      <i class="fa fa-check"></i>
+      Save
+    </button>
+    <button type="button" class="cancel-button btn btn-outline-secondary float-right m-1"
+            data-dismiss="modal">
+      <i class="fa fa-close"></i>
+      Cancel
+    </button>
   </form>
 {% endif %}
