--- a/tardis/tardis_portal/templates/tardis_portal/index.html
+++ b/tardis/tardis_portal/templates/tardis_portal/index.html
@@ -8,10 +8,7 @@
 {% endblock script %}
 
 {% block content %}
-<div id="content">
-  <div class="page-header">
-    <h1>{{site_title|default:'MyTardis'}} Data Store</h1>
-  </div>
+<div id="content" class="pt-lg-3">
   {% if not is_authenticated %}
     <p>
       {% if RAPID_CONNECT_ENABLED %}
@@ -24,51 +21,64 @@
       {% endif %}
     </p>
   {% endif %}
-  <div class="row">
-    <div class="col-md-9">
+  <div class="row-fluid">
+    <div class="col-12 col-lg-10">
       {% if is_authenticated %}
         <h3>Your most recent experiments <small><strong>(<a href="{% url 'tardis.tardis_portal.views.my_data' %}">view all</a>)</strong></small></h3>
         <div id="private-experiments" class="panel-group experiments">
           {% for exp in private_experiments %}
             <div class="accordion-group">
               <div class="accordion-heading" data-parent="#private-experiments">
-                <div id="private-toggle-{{exp.id}}" class="accordion-toggle private-experiment" data-toggle="collapse"  data-parent="#private-experiments">
-                  <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-                  <strong><a class="pull-left explink"
-                             href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-                  <ul class="nav nav-pills badgelist">
-                    <li class="pull-right">{{ exp|experiment_public_access_badge }}</li>
-                    <li class="pull-right">{{ exp|experiment_datafiles_badge }}</li>
-                    <li class="pull-right">{{ exp|experiment_datasets_badge }}</li>
-                    <li class="pull-right">{{ exp|experiment_last_updated_badge }}</li>
-                  </ul>
-                  <small>
-                    {% for author in exp.experimentauthor_set.all %}
-                      {% if not forloop.first %}, {% endif %}
-                      <span property="dc:author">{{ author.author }}</span>
-                    {% endfor %}
-                    &nbsp;
-                  </small>
-                  <span class="pull-right">
-                    {% for dltype, dlurl in exp.get_download_urls.items %}
-                      {% if forloop.first %}
-                        <a class="dllink" href="{{dlurl}}"
-                           title="Download Entire Experiment as {{dltype}}">
-                          <i class="fa fa-download"></i>
-                          <em>Download data as .{{dltype}}</em>
+                <div id="private-toggle-{{exp.id}}"
+                     class="private-experiment">
+                  <div class="row">
+                    <div class="col">
+                      <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
+                      <strong>
+                        <a class="float-left explink"
+                           href="{% url 'tardis_portal.view_experiment' exp.id %}">
+                            {{ exp.title }}
                         </a>
-                      {% endif %}
-                    {% endfor %}
-                  </span>
-                </div> {% comment %}class="accordion-toggle private-experiment"{% endcomment %}
-              </div> {% comment %}class="accordiong-heading"{% endcomment %}
+                      </strong>
+                    </div>
+                    <div class="col">
+                      <ul class="nav nav-pills float-right">
+                        <li>{{ exp|experiment_public_access_badge }}</li>
+                        <li>{{ exp|experiment_datafiles_badge }}</li>
+                        <li>{{ exp|experiment_datasets_badge }}</li>
+                        <li>{{ exp|experiment_last_updated_badge }}</li>
+                      </ul>
+                    </div>
+                  </div> <!-- row -->
+                </div> {% comment %}class="private-experiment"{% endcomment %}
+                <div class="row">
+                    <small class="col">
+                      {% for author in exp.experimentauthor_set.all %}
+                        {% if not forloop.first %}, {% endif %}
+                        <span property="dc:author">{{ author.author }}</span>
+                      {% endfor %}
+                      &nbsp;
+                    </small>
+                    <span class="col">
+                      {% for dltype, dlurl in exp.get_download_urls.items %}
+                        {% if forloop.first %}
+                          <a class="dllink float-right" href="{{dlurl}}"
+                             title="Download Entire Experiment as {{dltype}}">
+                            <i class="fa fa-download"></i>
+                            <em>Download</em>
+                          </a>
+                        {% endif %}
+                      {% endfor %}
+                    </span>
+                </div> <!-- class="row" -->
+              </div> {% comment %}class="accordion-heading"{% endcomment %}
               <div id="collapse-{{exp.id}}"
                    class="panel-collapse collapse">
                 <div class="accordion-inner">
-                  <p>{{exp.description|default:"<em>No description</em>"|bleach}}</p>
+                  <p class="small">{{exp.description|default:"<em>No description</em>"|bleach}}</p>
                   <div id="private-recent-datasets-{{exp.id}}"></div>
                 </div> {% comment %}class="accordion-inner"{% endcomment %}
-              </div> {% comment %}class="accordion-body"{% endcomment %}
+              </div> {% comment %}class="row"{% endcomment %}
             </div> {% comment %}class="accordion-group"{% endcomment %}
             {% empty %}
             <p>You have no data stored on this server.<br/>
@@ -86,50 +96,58 @@
       {% for exp in public_experiments %}
         <div class="accordion-group">
           <div class="accordion-heading" data-parent="#public-experiments">
-            <div id="public-toggle-{{exp.id}}" class="accordion-toggle public-experiment" data-toggle="collapse"  data-parent="#public-experiments">
-              <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
-              <strong><a class="pull-left explink"
-                         href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-              <ul class="nav nav-pills badgelist">
-                <li class="pull-right">{{ exp|experiment_datafiles_badge }}</li>
-                <li class="pull-right">{{ exp|experiment_datasets_badge }}</li>
-                <li class="pull-right">{{ exp|experiment_last_updated_badge }}</li>
-              </ul>
-              <small>
-                {% for author in exp.experimentauthor_set.all %}
-                  {% if not forloop.first %}, {% endif %}
-                  <span property="dc:author">{{ author.author }}</span>
-                {% endfor %}
-                &nbsp;
-              </small>
-              <span class="pull-right">
-                {% if exp.public_download_allowed %}
-                  {% for dltype, dlurl in exp.get_download_urls.items %}
-                    {% if forloop.first %}
-                      <a class="dllink" href="{{dlurl}}"
-                         title="Download Entire Experiment as {{dltype}}">
-                        <i class="fa fa-download"></i>
-                        <em>Download data as .{{dltype}}</em>
-                      </a>
-                    {% endif %}
+            <div id="public-toggle-{{exp.id}}" class="public-experiment" data-toggle="collapse"  data-parent="#public-experiments">
+              <div class="row">
+                <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
+                <strong>
+                  <a class="col explink"
+                     href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
+                </strong>
+                <div class="col">
+                  <ul class="nav nav-pills float-right">
+                    <li>{{ exp|experiment_datafiles_badge }}</li>
+                    <li>{{ exp|experiment_datasets_badge }}</li>
+                    <li>{{ exp|experiment_last_updated_badge }}</li>
+                  </ul>
+                </div>
+              </div>  <!-- class="row" -->
+            </div>  <!-- class="public-experiment" -->
+            <div class="row">
+                <small class="col">
+                  {% for author in exp.experimentauthor_set.all %}
+                    {% if not forloop.first %}, {% endif %}
+                    <span property="dc:author">{{ author.author }}</span>
                   {% endfor %}
-                 {% endif %}
-              </span>
-            </div> {% comment %}class="accordion-toggle public-experiment"{% endcomment %}
+                  &nbsp;
+                </small>
+                <span class="col">
+                  {% if exp.public_download_allowed %}
+                    {% for dltype, dlurl in exp.get_download_urls.items %}
+                      {% if forloop.first %}
+                        <a class="dllink float-right" href="{{dlurl}}"
+                           title="Download Entire Experiment as {{dltype}}">
+                          <i class="fa fa-download"></i>
+                          <em>Download</em>
+                        </a>
+                      {% endif %}
+                    {% endfor %}
+                   {% endif %}
+                </span>
+            </div> {% comment %}class="row public-experiment"{% endcomment %}
           </div> {% comment %}class="accordion-heading"{% endcomment %}
           <div id="collapsepub-{{exp.id}}"
                class="panel-collapse collapse">
             <div class="accordion-inner">
-              <p>{{exp.description|default:"<em>No description</em>"|bleach}}</p>
+              <p class="small">{{exp.description|default:"<em>No description</em>"|bleach}}</p>
               <div id="public-recent-datasets-{{exp.id}}"></div>
             </div> {% comment %}class="accordion-inner"{% endcomment %}
-          </div> {% comment %}class="accordion-body"{% endcomment %}
+          </div> {% comment %}class="row"{% endcomment %}
         </div> {% comment %}class="accordion-group"{% endcomment %}
         {% empty %}
         <p>There is no public data available on this server.</p>
       {% endfor %}
       </div> {% comment %}id="public-experiments" class="panel-group experiments"{% endcomment %}
-    </div> {% comment %}class="col-md-9"{% endcomment %}
+    </div> {% comment %}class="col-lg-10"{% endcomment %}
   </div> {% comment %}class="row"{% endcomment %}
 </div> {% comment %}id="content"{% endcomment %}
 <input type="hidden" id="exps-expand-accordion" value="{{ exps_expand_accordion }}">
