--- a/tardis/tardis_portal/templates/tardis_portal/login.html
+++ b/tardis/tardis_portal/templates/tardis_portal/login.html
@@ -14,29 +14,29 @@
 
 {% else %}
 
-  <div class="col-md-7">
+  <div class="col-lg-7">
     <form class="form-horizontal" action method="post">
       {% csrf_token %}
       <legend>Please Log In</legend>
       <input name="next_page" type="hidden" value="{{ next_page|default:"/" }}" />
       <div class="form-group">
-        <label class="control-label col-md-2" for="id_username">Username</label>
-        <div class="col-md-5">
+        <label class="control-label col-lg-2" for="id_username">Username</label>
+        <div class="col-lg-5">
           <input type="text" name="username" autocomplete="username"
                  class="form-control" id="id_username" required
                  placeholder="username" style="max-width: 200px;">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-md-2" for="id_password">Password</label>
-        <div class="col-md-5">
+        <label class="control-label col-lg-2" for="id_password">Password</label>
+        <div class="col-lg-5">
           <input type="password" name="password" autocomplete="current-password"
                  class="form-control" id="id_password" required placeholder="password"
                  style="max-width: 200px;">
         </div>
       </div>
       <div class="form-group">
-        <div class="col-md-offset-2 col-md-2">
+        <div class="col-lg-offset-2 col-lg-2">
             <button type="submit" class="form-control btn btn-info"
                     style="min-width: 80px; max-width: 200px;">
             <i class="fa fa-sign-in"></i> Log In
