--- a/tardis/tardis_portal/templates/tardis_portal/portal_template.html
+++ b/tardis/tardis_portal/templates/tardis_portal/portal_template.html
@@ -77,100 +77,147 @@
     {% endblock %}
   </head>
   <body>
-    <div class="navbar navbar-default navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            {% block site_brand %}
-            <a class="nav navbar-brand" href="{% url 'tardis.tardis_portal.views.index' %}">{{ site_title|default:'MyTardis' }}</a>
-            {% endblock %}
-          </div>
-          <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="{% url 'tardis.tardis_portal.views.index' %}">Home</a></li>
-              <li><a href="{% url 'tardis.tardis_portal.views.about' %}">About</a></li>
-              <li><a href="{% url 'tardis.tardis_portal.views.my_data' %}">My Data</a></li>
-              <li><a href="{% url 'tardis.tardis_portal.views.shared' %}">Shared</a></li>
-              <li><a href="{% url 'tardis.tardis_portal.views.public_data' %}">Public Data</a></li>
-              {% if request.user.is_superuser %}
-              <li><a href="{% url 'tardis.tardis_portal.views.stats' %}">Stats</a></li>
-              {% endif %}
-              {% with request|check_if_facility_manager as facility_manager %}
-              {% if facility_manager %}
-              <li><a href="{% url 'tardis.tardis_portal.views.facility_overview' %}">Facility Overview</a></li>
-              {% endif %}{% endwith %}
-              <li><a href="http://mytardis.readthedocs.io/en/{{ version.tag|lower }}/userguide.html" target="_blank"><b>Help</b></a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-            {% if is_authenticated %}
-              <li id="user-menu" class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#user-menu">
-                  {{ username }}
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  {% for menu_item in user_menu %}
-                    {% if not menu_item.divider %}
-                      <li>
-                        <a href="{{ menu_item.url }}">
-                          <i class="{{menu_item.icon}}"
-                             {% if menu_item.style %}
-                               style="{{menu_item.style}}"
-                             {% endif %}
-                          >
-                          </i>
-                          {{menu_item.label}}
-                        </a>
-                      </li>
-                    {% else %}
-                      <li class="divider"></li>
-                    {% endif %}
-                  {% endfor %}
-                </ul>
-              </li>
-            {% else %}
-              {% if registration_enabled %}
-              <li>
-                <a href="{% url 'tardis.tardis_portal.views.register' %}">
-                  Register
-                </a>
-              </li>
-              {% endif %}
-              <li>
-              {% if RAPID_CONNECT_ENABLED %}
-                  <a id="login-button" href={{ RAPID_CONNECT_LOGIN_URL }}>
-                    <i class="fa fa-sign-in"></i>
-                    Log In
-                  </a>
-              {% else %}
-                <a id="login-button" href="{% url 'tardis.tardis_portal.views.login' %}">
-                  <i class="fa fa-sign-in"></i>
-                  Log In
-                </a>
-              {% endif %}
-              </li>
-            {% endif %}
-            </ul>
-            {% if search_form %}
-            <form id="searchbox" method="get"
-                class="navbar-form pull-right"
-                role="search"
-                action="{% url 'haystack_search' %}">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search" id="id_q" autocomplete="off" name="q"
-                       {% if query %} value="{{ query }}" {% endif %}/>
-              </div>
-            </form>
-            {% endif %}
-          </div> <!-- .navbar-collapse -->
-        </div> <!-- .container-fluid -->
-    </div>
+    <nav class="navbar navbar-expand-lg fixed-top flex-lg-row navbar-light bg-light">
+      {% block site_brand %}
+      <a class="nav navbar-brand"
+         href="{% url 'tardis.tardis_portal.views.index' %}"
+         style="color: blue;">
+        <img src="{% static 'favicon.ico' %}" class="d-inline-block"
+             width="30" height="30" 
+             alt="{{ site_title|default:'MyTardis' }}">
+        {{ site_title|default:'MyTardis' }}
+      </a>
+      {% endblock %}
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+              data-target="#navbar-supported-content"
+              aria-controls="navbar-supported-content" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div id="navbar-supported-content" class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.index' %}">
+              Home
+            </a>
+	  </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.about' %}">
+              About
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.my_data' %}">
+              My Data
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.shared' %}">
+              Shared
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.public_data' %}">
+              Public Data
+            </a>
+          </li>
+          {% if request.user.is_superuser %}
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.stats' %}">
+              Stats
+            </a>
+          </li>
+          {% endif %}
+          {% with request|check_if_facility_manager as facility_manager %}
+          {% if facility_manager %}
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.facility_overview' %}">
+              Facility Overview
+            </a>
+          </li>
+          {% endif %}{% endwith %}
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="http://mytardis.readthedocs.io/en/{{ version.tag|lower }}/userguide.html"
+               target="_blank">
+              <b>Help</b>
+            </a>
+          </li>
+        </ul>
+        {% if search_form %}
+        <form id="searchbox" method="get"
+            class="form-inline ml-lg-auto flex-row"
+            role="search"
+            action="{% url 'haystack_search' %}">
+          <input id="id_q" type="text" class="form-control"
+                 placeholder="Search" autocomplete="off" name="q"
+                 {% if query %} value="{{ query }}" {% endif %}/>
+        </form>
+        {% endif %}
+        <ul class="nav navbar-nav mt-2 mt-lg-0 flex-row">
+        {% if is_authenticated %}
+          <li id="user-menu" class="nav-item dropdown">
+            <a id="navbar-dropdown" class="nav-link font-weight-bold dropdown-toggle"
+               data-toggle="dropdown" href="#user-menu"
+               aria-haspopup="true" aria-expanded="false">
+              {{ username }}
+              <span class="caret"></span>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" 
+                 aria-labelledby="navbar-dropdown">
+              {% for menu_item in user_menu %}
+                {% if not menu_item.divider %}
+                    <a class="dropdown-item" href="{{ menu_item.url }}">
+                      <i class="{{menu_item.icon}}"
+                         {% if menu_item.style %}
+                           style="{{menu_item.style}}"
+                         {% endif %}
+                      >
+                      </i>
+                      {{menu_item.label}}
+                    </a>
+                {% else %}
+                  <div class="divider"></div>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </li>
+        {% else %}
+          {% if registration_enabled %}
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.register' %}">
+              Register
+            </a>
+          </li>
+          {% endif %}
+          <li class="nav-item">
+          {% if RAPID_CONNECT_ENABLED %}
+            <a id="login-button" class="nav-link font-weight-bold"
+               href={{ RAPID_CONNECT_LOGIN_URL }}>
+              <i class="fa fa-sign-in"></i>
+              Log In
+            </a>
+          {% else %}
+            <a id="login-button" class="nav-link font-weight-bold"
+               href="{% url 'tardis.tardis_portal.views.login' %}">
+              <i class="fa fa-sign-in"></i>
+              Log In
+            </a>
+          {% endif %}
+          </li>
+        {% endif %}
+        </ul>
+      </div> <!-- .navbar-collapse -->
+    </nav>
 
     <div class="container-fluid">
       {% if subtitle %}
@@ -268,27 +315,27 @@
         {% endcapture %}
 
         {% if sidebar %}
-          <div id="sidebar-pane" class="col-md-3">{{sidebar}}</div>
-          <div id="content-pane" class="col-md-9">{{content}}</div>
+          <div id="sidebar-pane" class="col-lg-3">{{sidebar}}</div>
+          <div id="content-pane" class="col-lg-9">{{content}}</div>
         {% else %}
-        <div class="col-md-12">{{content}}</div>
+        <div class="col-lg-12">{{content}}</div>
         {% endif %}
       </div>
 
 
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-lg-12">
         {% block bottom %}{% endblock bottom %}
         </div>
       </div>
 
       {% block footer %}
       <div class="row" id="footer">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           {{sponsored_by|default:""|safe}}
         </div>
-        <div class="col-md-6">
-          <div class="pull-right">
+        <div class="col-lg-6">
+          <div class="float-right">
           Powered by <a href="https://github.com/mytardis/mytardis">MyTardis</a>
           </div>
         </div>
@@ -297,6 +344,7 @@
 
     </div>
     <!-- /container -->
+    <script src="{% static 'popper.js/dist/umd/popper.min.js' %}"></script>
     <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'bootstrap-3-typeahead/bootstrap3-typeahead.min.js' %}"></script>
     {% if ga_enabled %}
