--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -6,32 +6,24 @@
 
 {% block content %}
 
-<div id="content">
+<div id="content" class="pt-lg-3">
   <div class="row">
-    <div class="col-md-9">
-      <h2 class="visible-xs">Experiments</h2>
-      <div class="pull-left">
-          <h2 class="hidden-xm" style="text-align: center">Experiments</h2>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-9">
+    <div class="col-12 col-lg-10">
       {% if not public_experiments %}
       <p class="alert alert-info">
         No experiments have been published yet.
       </p>
       {% else %}
-      <div class="pull-left">
+      <div class="float-left">
         <h3><strong>{{ public_experiments.count }}</strong>
         Public Experiment{{ public_experiments.count|pluralize}}
         </h3>
       </div>
-      <div class="pull-right">
-        <button type="button" class="btn btn-success btn-xs"
+      <div class="float-right">
+        <button type="button" class="btn btn-outline-secondary btn-xs m-1"
                 onclick="$('#public-experiments .panel-collapse').collapse('hide');" >
         Collapse all</button>
-        <button type="button" class="btn btn-success btn-xs"
+        <button type="button" class="btn btn-outline-secondary btn-xs m-1"
                 onclick="$('#public-experiments .panel-collapse').collapse('show');" >
         Expand all</button>
       </div>
@@ -42,48 +34,62 @@
             <div class="accordion-heading">
               <div class="accordion-toggle" data-toggle="collapse"
                    onclick="$('#collapse{{exp.id}}').collapse('toggle');" >
-                <strong><a class="pull-left explink"
-                           href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a></strong>
-                <ul class="nav nav-pills badgelist">
-                  <li class="pull-right">
-                    {{ exp|experiment_public_access_badge }}
-                  </li>
-                  <li class="pull-right">
-                    {{ exp|experiment_datafiles_badge }}
-                  </li>
-                  <li class="pull-right">
-                    {{ exp|experiment_datasets_badge }}
-                  </li>
-                  <li class="pull-right">
-                    {{ exp|experiment_last_updated_badge }}
-                  </li>
-                </ul>
-                <small>
-                  {% for author in exp.experimentauthor_set.all %}
-                    {% if not forloop.first %}, {% endif %}
-                    <span property="dc:author">{{ author.author }}</span>
-                  {% endfor %}
-                  &nbsp;
-                </small>
-                <span class="pull-right">
-                  {% if exp.public_download_allowed %}
-                  {% for dltype, dlurl in exp.get_download_urls.items %}
-                    {% if forloop.first %}
-                      <a class="dllink" href="{{dlurl}}"
-                         title="Download Entire Experiment as {{dltype}}">
-                        <i class="fa fa-download"></i>
-                        <em>Download data as .{{dltype}}</em>
-                      </a>
-                    {% endif %}
-                  {% endfor %}
-                  {% endif %}
-                </span>
+                <div class="row">
+                  <div class="col">
+                    <strong>
+                      <a class="float-left explink"
+                         href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
+                    </strong>
+                  </div>
+                  <div class="col">
+                    <ul class="nav nav-pills badgelist float-right">
+                      <li>
+                        {{ exp|experiment_public_access_badge }}
+                      </li>
+                      <li>
+                        {{ exp|experiment_datafiles_badge }}
+                      </li>
+                      <li>
+                        {{ exp|experiment_datasets_badge }}
+                      </li>
+                      <li>
+                        {{ exp|experiment_last_updated_badge }}
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <small>
+                      {% for author in exp.experimentauthor_set.all %}
+                        {% if not forloop.first %}, {% endif %}
+                        <span property="dc:author">{{ author.author }}</span>
+                      {% endfor %}
+                      &nbsp;
+                    </small>
+                  </div>
+                  <div class="col">
+                    <span class="float-right">
+                      {% if exp.public_download_allowed %}
+                      {% for dltype, dlurl in exp.get_download_urls.items %}
+                        {% if forloop.first %}
+                          <a class="dllink" href="{{dlurl}}"
+                             title="Download Entire Experiment as {{dltype}}">
+                            <i class="fa fa-download"></i>
+                            <em>Download data as .{{dltype}}</em>
+                          </a>
+                        {% endif %}
+                      {% endfor %}
+                      {% endif %}
+                    </span>
+                  </div>
+                </div>
               </div>
             </div>
             <div id="collapse{{exp.id}}"
                  class="panel-collapse collapse in">
               <div class="accordion-inner">
-                <p><em>{{exp.description|default:""|bleach}}</em></p>
+                <p class="small"><em>{{exp.description|default:""|bleach}}</em></p>
                 {% for ds in exp.datasets.all|dictsortreversed:"id"|slice:":1" %}
                   {% if forloop.first %}
                     <ul class="list-group">
