--- a/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_dataset.html
@@ -310,8 +310,8 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        <h2 class="title"></h2>
         <a class="close" data-dismiss="modal">&times;</a>
-        <h1 class="title"></h1>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -328,8 +328,8 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        <h2 class="title">Request sent</h2>
         <a class="close" data-dismiss="modal">&times;</a>
-        <h1 class="title">Request sent</h1>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -353,8 +353,8 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        <h2 class="title">Import Files</h2>
         <a class="close" data-dismiss="modal">&times;</a>
-        <h1 class="title">Import Files</h1>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -367,10 +367,9 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
 </div>
 
 <div class="page-header">
-  <h4>Dataset</h4>
-    <div class="pull-right">
+    <div class="float-right">
   {% if push_to_enabled and is_authenticated %}
-    <a class="btn btn-xs btn-primary" title="Push to..."
+    <a class="btn btn-sm btn-outline-secondary" title="Push to..."
        onclick="window.open('{{ push_to_url }}', 'push-to', 'width=800, height=600'); return false;"
        href="{{ push_to_url }}" target="_blank">
       <i class="fa fa-upload"></i>
@@ -378,94 +377,99 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
     </a>
   {% endif %}
   {% if has_write_permissions and is_authenticated %}
-    <a class="btn btn-warning btn-xs" title="Edit Dataset"
+    <a class="btn btn-outline-secondary btn-xs" title="Edit Dataset"
        href="{{ dataset.get_edit_url }}">
       <i class="fa fa-pencil"></i>
       Edit Dataset
     </a>
   {% endif %}
     </div>
-  <h1>
+  <h2>
     {% if dataset.description %}
       <span property="dc:title">{{ dataset.description }}</span>
     {% else %}
       <span>Untitled Dataset</span>
     {% endif %}
-  </h1>
-  {% if from_instrument or from_facility %}
-    <h4 style="padding-top: 4px">
-        <small>
-          {% if from_instrument %}
-            <span style="margin-right: 2em;">
-              Instrument: {{ from_instrument }}
-            </span>
-          {% endif %}
-          {% if from_facility %}
-            <span style="margin-right: 2em;">
-              Facility: {{  from_facility }}
-            </span>
-          {% endif %}
-        </small>
-    </h4>
-  {% endif %}
-  {% if from_experiment %}
-  <h4 style="padding-top: 4px">
-      <small>
-      From the experiment:
-      <a
-         class="experiment-link"
-         href="{{ from_experiment.get_absolute_url }}">
-      {{ from_experiment.title }}
-      </a>
-      </small>
-  </h4>
-  {% else %}
-        {% if other_experiments|length == 1 %}
-        <h4 style="padding-top: 4px">
+  </h2>
+  <div class="row">
+    <div class="col">
+      {% if from_instrument or from_facility %}
+        <h6 style="padding-top: 4px">
             <small>
-            From the experiment:
-        {% for other_experiment in other_experiments %}
-            <a
-               class="experiment-link"
-               href="{{ other_experiment.get_absolute_url }}">
-            {{ other_experiment.title }}
-            </a>
+              {% if from_instrument %}
+                <span style="margin-right: 2em;">
+                  Instrument: {{ from_instrument }}
+                </span>
+              {% endif %}
+              {% if from_facility %}
+                <span style="margin-right: 2em;">
+                  Facility: {{  from_facility }}
+                </span>
+              {% endif %}
             </small>
-        </h4>
-        {% endfor %}
-        {% endif %}
+        </h6>
+      {% endif %}
+      {% if from_experiment %}
+      <h6 style="padding-top: 4px">
+          <small>
+          From the experiment:
+          <a
+             class="experiment-link"
+             href="{{ from_experiment.get_absolute_url }}">
+          {{ from_experiment.title }}
+          </a>
+          </small>
+      </h6>
+      {% else %}
+            {% if other_experiments|length == 1 %}
+            <h6 style="padding-top: 4px">
+                <small>
+                From the experiment:
+            {% for other_experiment in other_experiments %}
+                <a
+                   class="experiment-link"
+                   href="{{ other_experiment.get_absolute_url }}">
+                {{ other_experiment.title }}
+                </a>
+                </small>
+            </h6>
+            {% endfor %}
+            {% endif %}
 
-  {% endif %}
-  {% if dataset.immutable %}
-  <h4 style="padding-top: 4px">
-      <small>
-      This experiment has been set to immutable on creation (cannot be modified)
-      </small>
-  </h4>
-  {% endif %}
-
-    <p class="pull-right">
-    {{ dataset|dataset_experiments_badge}}&nbsp;
-    {{ dataset|dataset_datafiles_badge }}&nbsp;
-    {{ dataset|dataset_size_badge }}
-    </p>
-    <p style="text-align:left; margin-top:10px;">
-  </p>
+      {% endif %}
+      {% if dataset.immutable %}
+      <h6 style="padding-top: 4px">
+          <small>
+          This experiment has been set to immutable on creation (cannot be modified)
+          </small>
+      </h6>
+      {% endif %}
+    </div>
+    <div class="col">
+      <p class="float-right">
+      {{ dataset|dataset_experiments_badge}}&nbsp;
+      {{ dataset|dataset_datafiles_badge }}&nbsp;
+      {{ dataset|dataset_size_badge }}
+      </p>
+      <p style="text-align:left; margin-top:10px;">
+      </p>
+    </div>
+  </div>
 </div>
 
 <div class="row" >
-  <div class="col-md-8">
+  <div class="col-lg-8">
     {% block dataset_content_preview %}
     {% if dataset.get_images.exists %}
     <div style="margin-bottom: 20px">
     <h3>Preview Images</h3>
     <div class="info-box">
-      <div id="preview" class="carousel" data-ride="carousel"
+      <div id="preview" class="carousel slide" data-ride="carousel"
            style="margin: auto;">
         <!-- Carousel items -->
         <div class="carousel-inner" style="background-color: white;">
           {% for datafile in dataset.get_images|slice:carousel_slice %}
-            <div class="{{ forloop.first|yesno:'active ,' }}item" style="height: 100%">
+            <div class="{{ forloop.first|yesno:'active ,' }}carousel-item" style="height: 100%">
               {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size='!320,240' rotation=0 quality='native' format='jpg' as thumbnail %}
               {% url 'tardis.tardis_portal.iiif.download_image' datafile_id=datafile.id region='full' size='full' rotation=0 quality='native' format='png' as image %}
               <a href="{{ image }}">
@@ -475,21 +479,22 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
                      onerror="$(this).parents('.item').remove()"/>
               </a>
               <div class="carousel-caption">
-                <h4>{{ datafile.filename }}</h4>
+                <h6>{{ datafile.filename }}</h6>
               </div>
             </div>
           {% endfor %}
         </div>
         {% if dataset.get_images|slice:":2"|length > 1 %}
             <!-- Carousel nav -->
-            <a class="left carousel-control" href="#preview" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <a class="carousel-control-prev" href="#preview" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="right carousel-control" href="#preview" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <a class="carousel-control-next" href="#preview" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
+
         {% endif %}
       </div>
       </div>
@@ -537,18 +542,18 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
         {% endif %}
       </div>  <!-- class="info-box" -->
     </div>  <!-- "other-experiments-pane" -->
-  </div>  <!-- class="col-md-8" -->
+  </div>  <!-- class="col-lg-8" -->
 
-  <div class="col-md-4"> {# side bar #}
+  <div class="col-lg-4"> {# side bar #}
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-lg-8">
       <h3 id="total-count" style="display: inline">
       {{dataset.datafile_set.count}} File{% if dataset.datafile_set.count != 1 %}s{%endif%}
       </h3>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
 {% if has_write_permissions and perms.tardis_portal.add_datafile and not experiment.public and not immutable %}
-    <span class="btn btn-sm btn-success fileinput-button pull-right">
+    <span class="btn btn-sm btn-outline-secondary fileinput-button float-right">
         <i class="glyphicon glyphicon-plus"></i>
         <span>Add files...</span>
         <input id="fileupload" type="file" name="attached_file"
@@ -558,14 +563,14 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
   </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         {% block downloads %}
             {% if has_download_permissions %}
                 <p><b>Download Dataset:</b>
                     {% if organization|length > 1 %}
                         {% for p in protocol %}
                             {% for o in organization %}
-                                <a class="btn btn-primary btn-xs" href="{{p.1}}{{o}}"
+                                <a class="btn btn-outline-secondary btn-xs" href="{{p.1}}{{o}}" role="button"
                                    title="Download Entire Experiment as {{p.0|upper}} with {{o}} organization">
                                     <i class="fa fa-download"></i>
                                     {% if o == default_organization %}
@@ -578,7 +583,7 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
                         {% endfor %}
                     {% else %}
                         {% for p in protocol %}
-                            <a class="btn btn-primary btn-xs" href="{{p.1}}"
+                            <a class="btn btn-outline-secondary btn-xs" href="{{p.1}}" role="button"
                                title="Download Entire Dataset as {{p.0|upper}}">
                                 <i class="fa fa-download"></i>
                                 {{p.0|upper}}
@@ -586,18 +591,24 @@ $(document).on('click', '#modal-metadata .submit-button', function() {
                         {% endfor %}
                     {% endif %}
                     <a target="_blank"
-                       href="{% url "tardis.apps.sftp:index" %}?object_id={{ dataset.id }}&object_type=dataset"
-                       class="btn btn-primary btn-xs" title="Download with SFTP">SFTP</a>
-                    <a class="btn btn-primary btn-xs"
+                       href="{% url "tardis.apps.sftp:index" %}?object_id={{ dataset.id }}&object_type=dataset" role="button"
+                       class="btn btn-outline-secondary btn-xs" title="Download with SFTP">
+                      <i class="fa fa-download"></i>
+                      SFTP
+                    </a>
+                    <a class="btn btn-outline-secondary btn-xs" role="button"
                        href="{% url 'tardis_portal.dataset_checksums' dataset.id %}"
-                       title="Download MD5 checksums for all files in this Dataset">MD5</a>
+                       title="Download MD5 checksums for all files in this Dataset">
+                      <i class="fa fa-download"></i>
+                      MD5
+                    </a>
                 </p>
             {% endif %}
         {% endblock downloads %}
     </div>
 </div>
       <div class="row">
-          <div id="progress" class="progress col-md-12" style="height:4px;min-height:4px;margin-bottom:8px;">
+          <div id="progress" class="progress col-lg-12" style="height:4px;min-height:4px;margin-bottom:8px;">
               <div class="progress-bar progress-bar-success" style="background-color:blue;height:4px;width:0%;"></div>
           </div>
       </div>
