--- a/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
+++ b/tardis/tardis_portal/templates/tardis_portal/view_experiment.html
@@ -30,8 +30,8 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        <h2 class="title">Add Parameters</h2>
         <a class="close" data-dismiss="modal">&times;</a>
-        <h1 class="title">Add Parameters</h1>
       </div>
 
       <div class="loading-placeholder" style="display: none">
@@ -45,11 +45,10 @@
 </div>
 
 <div class="page-header">
-  <h4>Experiment</h4>
   {% if not experiment.public %}
-  <div class="pull-right">
+  <div class="float-right">
     {% if push_to_enabled and is_authenticated %}
-    <a class="btn btn-xs btn-primary" title="Push to..."
+    <a class="btn btn-xs btn-outline-secondary" title="Push to..."
        onclick="window.open('{{ push_to_url }}', 'push-to', 'width=800, height=600'); return false;"
        href="{{ push_to_url }}" target="_blank">
       <i class="fa fa-upload"></i>
@@ -57,7 +56,7 @@
     </a>
     {% endif %}
     {% if has_write_permissions %}
-    <a class="btn btn-xs btn-warning" title="Edit Experiment"
+    <a class="btn btn-xs btn-outline-secondary" title="Edit Experiment"
        href="{{ experiment.get_edit_url }}">
       <i class="fa fa-pencil"></i>
       Edit Experiment
@@ -65,17 +64,16 @@
     {% endif %}
   </div>
   {% endif %}
-  <h1>
+  <h2>
     <span property="dc:title">{{ experiment.title }}</span>
-    <br/>
-    <small>
-        {% for author in experiment.experimentauthor_set.all %}{% capture as creator_span %}<span
-                property="dc:creator"
-                style="white-space: nowrap;">{{ author.author }}</span>{% endcapture %}{% if not forloop.first %}, {% endif %}{% if author.email %}<a
-                href="mailto:{{ author.email }}">{{ creator_span }}</a>{% endif %}{% if author.url %}<a
-                href="{{ author.url }}">{{ creator_span }}</a>{% endif %}{% if not author.email and not author.url %}{{ creator_span }}{% endif %}{% endfor %}
-    </small>
-  </h1>
+  </h2>
+  <h6>
+    {% for author in experiment.experimentauthor_set.all %}{% capture as creator_span %}<span
+            property="dc:creator"
+            style="white-space: nowrap;">{{ author.author }}</span>{% endcapture %}{% if not forloop.first %}, {% endif %}{% if author.email %}<a
+            href="mailto:{{ author.email }}">{{ creator_span }}</a>{% endif %}{% if author.url %}<a
+            href="{{ author.url }}">{{ creator_span }}</a>{% endif %}{% if not author.email and not author.url %}{{ creator_span }}{% endif %}{% endfor %}
+  </h6>
   <p style="text-align: right">
     {{ experiment|experiment_datasets_badge}}&nbsp;
     {{ experiment|experiment_datafiles_badge }}&nbsp;
@@ -86,10 +84,10 @@
 </div>
 
 <div class="row" >
-  <div class="col-md-5">
+  <div class="col-lg-5">
   <div align="center" style="margin-bottom: -20px">
   <div id="abstractHolder" style="display: none">{{ experiment.description|bleach|linebreaksbr }}</div>
-  <a id="abstract-toggle" class="btn btn-default btn-xs" title="Show Description">
+  <a id="abstract-toggle" class="btn btn-outline-secondary btn-xs" title="Show Description">
      Toggle Full Description
   </a>
   </div>
@@ -102,7 +100,11 @@
     <!-- Tab buttons -->
     <ul id="experiment-tabs" class="nav nav-pills">
       {% for appurl, appname in apps %}
-      <li><a data-toggle="tab" title="{{appname}}" href="{{ appurl }}">{{ appname }}</a></li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" title="{{appname}}"
+           href="{{ appurl }}">{{ appname }}
+        </a>
+      </li>
       {% endfor %}
     </ul>
     <div class="tab-content">
@@ -111,7 +113,7 @@
       </div>
     </div>
   </div>
-  <div id="datasets-pane" class="col-md-7">
+  <div id="datasets-pane" class="col-lg-7">
     {% include "tardis_portal/ajax/experiment_datasets.html" %}
   </div>
 </div>
